--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -1,44 +1,30 @@
-name: ci
+name: Build and push main image
+
 on:
   push:
-    branches:
-      - 'main'
+    branches: 
+    - main
 
 jobs:
-  docker:
+  push-store-image:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - image: amolshejole/OpenSign
-            dockerfile: apps/OpenSign/Dockerfile
-          - image: amolshejole/OpenSignServer
-            dockerfile: apps/OpenSignServer/Dockerfile
+
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: 'Checkout GitHub Action'
+        uses: actions/checkout@main
+
+      - name: 'Login to GitHub Container Registry'
+        uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
-        name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ matrix.image }}
-      -
-        name: Debug - List files
-        run: ls -R apps/OpenSign/  # Adjust the path as needed
-      -
-        name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ${{ matrix.dockerfile }}
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          registry: ghcr.io
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
+
+      - name: 'Build Inventory Image'
+        run: |
+          docker build  -f apps/OpenSign/Dockerfile . --tag ghcr.io/baldator/opensign:${GITHUB_REF##*/}
+          docker push ghcr.io/baldator/opensign:${GITHUB_REF##*/}
+          docker build  -f apps/OpenSignServer/Dockerfile . --tag ghcr.io/baldator/opensign-server:${GITHUB_REF##*/}
+          docker push ghcr.io/baldator/opensign-server:${GITHUB_REF##*/}
+          docker build  -f apps/mongo/Dockerfile . --tag ghcr.io/baldator/opensign-mongo:${GITHUB_REF##*/}
+          docker push ghcr.io/baldator/opensign-mongo:${GITHUB_REF##*/}
