--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     container_name: OpenSignServer-container
     command: /usr/src/app/node_modules/.bin/nodemon server.js
     volumes:
-      - ./apps/OpenSignServer/:/usr/src/app
-      - /usr/src/app/node_modules
+      - ./data/OpenSignServer/:/usr/src/app
+      - ./data/node_modules:/usr/src/app/node_modules
     ports:
       - "8080:8080"
     depends_on:
@@ -19,7 +19,7 @@ services:
     environment:
       - NODE_ENV=development
     networks:
-      - app-network
+      - tunnel
   mongo:
     build:
       context: ./apps/mongo
@@ -27,12 +27,12 @@ services:
     container_name: mongo-container
     image: opensign-mongo
     volumes:
-      - data-volume:/data/db
-      - ./apps/mongo/mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
+      - ./data/mongo/data:/data/db
+      - ./data/mongo/mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
     ports:
       - "27017:27017"
     networks:
-      - app-network
+      - tunnel
   client:
     build:
       context: ./apps/OpenSign
@@ -42,21 +42,15 @@ services:
     command: npm start
     env_file: .env
     volumes:
-      - ./apps/OpenSign/:/usr/app
-      - /usr/app/node_modules
+      - ./data/OpenSign/:/usr/app
+      - ./data/node_modules:/usr/app/node_modules
     depends_on:
       - server
     ports:
       - "3000:3000"
     networks:
-      - app-network
+      - tunnel
 
 networks:
-    app-network:
-        driver: bridge
-
-volumes:
-    data-volume:
-    node_modules:
-    web-root:
-      driver: local
+    tunnel:
+        external: true
